entity-registry/src/main/pegasus/com/datahub/test/invalid/MissingSearchableFieldName.pdl
namespace com.datahub.test.invalid

@Aspect = {
  "name": "invalidAspect"
}
record MissingSearchableFieldName {
  @Searchable = {
    "indexSettings": [
      { "indexType": "KEYWORD" }
    ]
  }
  textField: string
}